force-app/main/default/objects/custom_create195__c/custom_create195__c.object-meta.xml
<CustomObject>
    <label>Custom created object195</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects195</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>