force-app/main/default/objects/custom_create195__c/fields/custom_create_195field592__c.field-meta.xml
<CustomField>
    <fullName>custom_create_195field592__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 195field592</label>
    <type>Checkbox</type>
</CustomField>